Allow to define fully qualified class name in CodeGenerator::main